--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -4,6 +4,7 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+
 .center-text {
     text-align: center;
 }
@@ -37,6 +38,7 @@ a:active,
 a.active {
     outline: 0;
     color: #18bc9c;
+
 }
 
 h1,
@@ -324,6 +326,10 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+}
+
+#portfolio {
+    text-decoration: none;
 }
 
 #portfolio .portfolio-item .portfolio-link {
