--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,8 +1,10 @@
-/*!
- * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
+/
+ img {
+    /* Fills image into the parent element so it's fully covered. Contains aspect-ratio. */
+    object-fit: cover;
+    width : 360;
+    height: 260;
+}
 
 /*  bhoechie tab */
 div.bhoechie-tab-container{
