#portfolio .portfolio-item update

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -398,6 +398,9 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    width: 360;
+    height: 260;
+    object-fit: cover;
 }
 
 #portfolio {
