--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -398,8 +398,8 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
-    width: 360;
-    height: 260;
+    width: 360px;
+    height: 260px;
     object-fit: cover;
 }
 
